--- a/package.json
+++ b/package.json
@@ -2,67 +2,42 @@
     "name": "Project_Management_Application",
     "description": "Project Management Application",
     "version": "0.1.0",
-    "scripts": {
-        "postinstall": "bower install",
-        "prestart": "npm install",
-        "start": "http-server -a localhost -p 8000 -c-1"
-    },
-    "dependencies": {
-        "lodash": "~3.7.0"
-    },
+    "scripts": { },
     "devDependencies": {
         "autoprefixer-core": "^5.1.7",
+        "chai": "^2.2.0",
         "del": "~1.1.1",
         "glob": "^4.3.2",
         "gulp": "^3.8.8",
         "gulp-concat": "^2.4.1",
         "gulp-cssimport": "^1.3.1",
+        "gulp-eslint": "^0.15.0",
         "gulp-gzip": "0.0.8",
         "gulp-ignore": "^1.2.1",
-        "gulp-jshint": "^1.9.0",
         "gulp-minify-css": "^0.5.1",
         "gulp-postcss": "^4.0.3",
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^1.3.1",
-        "gulp-tar": "~1.3.2",
+        "gulp-sourcemaps": "^1.5.2",
+        "gulp-svg-sprite": "^1.0.20",
         "gulp-uglify": "^1.1.0",
         "gulp-util": "~3.0.2",
-        "jshint-stylish": "^1.0.0",
-        "karma": "~0.12.31",
+        "karma": "~0.13.0",
         "karma-chai": "~0.1.0",
         "karma-coverage": "^0.2.6",
-        "karma-jasmine": "^0.1.5",
         "karma-mocha": "~0.1.9",
         "karma-mocha-reporter": "~0.3.1",
         "karma-ng-html2js-preprocessor": "^0.1.2",
         "karma-phantomjs-launcher": "^0.1.4",
         "karma-sinon": "^1.0.4",
         "merge-stream": "^0.1.7",
-        "request": "~2.51.0",
+        "mkdirp": "^0.5.1",
+        "mocha": "^2.2.4",
+        "node-static": "^0.7.6",
         "run-sequence": "^1.0.2",
+        "sinon": "~1.14.1",
         "through2": "^0.6.3",
-        "vinyl": "^0.4.6",
-        "http-server": "^0.6.1",
-        "bower": "^1.3.1"
-    },
-    "samplePluginProps": {
-        "preloads": [
-            "../bower_components/jquery/dist/jquery.js",
-            "../bower_components/angular/angular.js",
-            "../bower_components/angular-ui-router/release/angular-ui-router.js",
-            "../bower_components/angular-resource.js",
-            "../bower_components/angular-cookies.js"
-        ],
-        "targetBrowsers": [
-            "last 2 version"
-        ],
-        "cssMain": "commons/scss/main.scss",
-        "jsFiles": [
-            "commons/js/index.js",
-            "commons/**/*.js",
-            "modules/**/*.js"
-        ],
-        "buildDestination": "./app/",
-        "archiveExtension": ".tgz"
+        "underscore": "^1.8.3",
+        "vinyl": "^0.4.6"
     }
 }
