--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "gulp-gzip": "0.0.8",
         "gulp-ignore": "^1.2.1",
         "gulp-minify-css": "^0.5.1",
+        "gulp-ng-annotate": "^1.1.0",
         "gulp-postcss": "^4.0.3",
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^1.3.1",
