Foundation integration. Added ROM architecture.

--- a/src/api/project-list.json
+++ b/src/api/project-list.json
@@ -1,34 +1,52 @@
 {
     "projects": [
         {
-            "name": "Project 1",
+            "id": 1,
+            "project_name": "Angular Basics",
             "desc": "Desc 1",
             "no_of_members": 1
         },
         {
-            "name": "Project 2",
+            "id": 2,
+            "project_name": "Project 2",
             "desc": "Desc 2",
             "no_of_members": 2
         },
         {
-            "name": "Project 3",
+            "id": 3,
+            "project_name": "Project 3",
             "desc": "Desc 3",
             "no_of_members": 3
         },
         {
-            "name": "Project 4",
+            "id": 4,
+            "project_name": "Project 4",
             "desc": "Desc 4",
             "no_of_members": 4
         },
         {
-            "name": "Project 5",
+            "id": 5,
+            "project_name": "Project 5",
             "desc": "Desc 5",
             "no_of_members": 5
         },
         {
-            "name": "Project 6",
+            "id": 6,
+            "project_name": "Project 6",
             "desc": "Desc 6",
             "no_of_members": 6
+        },
+        {
+            "id": 7,
+            "project_name": "Project 7",
+            "desc": "Desc 7",
+            "no_of_members": 2
+        },
+        {
+            "id": 8,
+            "project_name": "Project 8",
+            "desc": "Desc 9",
+            "no_of_members": 4
         }
     ]
 }
